--- a/extension/options.css
+++ b/extension/options.css
@@ -1,5 +1,5 @@
 
-p, dd {
+p, dd, h3 {
   margin: 0;
   padding: 0;
 }
@@ -83,4 +83,12 @@ body {
 .op-button:hover {
   background-color: rgba(66, 133, 244, 0.04);
   border-color: #d2e3fc;
+}
+
+.preview {
+  margin-top: 30px;
+}
+.sample-text {
+  padding: 20px 16px;
+  border: 1px solid rgba(0, 0, 0, 0.06);
 }
